--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>StuyPulse Team 694{% if page.title %} | {{ page.title }}{% endif %}</title>
+        <title>Stuypulse{% if page.title %} | {{ page.title }}{% endif %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -35,24 +35,18 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="#">StuyPulse</a>
+                    <a class="brand" href="/">Stuypulse</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li class="active"><a href="/">Home</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li class="nav-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li><a href="/about.html">About Us</a></li>
+                                    <li><a href="/history/">Team History</a></li>
                                 </ul>
                             </li>
+                            <li><a href="/contact.html">Contact</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
@@ -66,7 +60,7 @@
             <hr>
 
             <footer>
-                <p>&copy; StuyPulse 2012</p>
+                <p>&copy; Stuypulse 2012</p>
             </footer>
 
         </div> <!-- /container -->
