--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,14 +39,14 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li{% if page.url == '/index.html' %} class="active"{% endif %}><a href="/">Home</a></li>
-                            <li class="dropdown{% if page.url == '/about.html' or page.url contains '/history/' %} active{% endif %}">
+                            <li class="dropdown{% if page.url == '/about/index.html' or page.url contains '/history/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/about.html">About Us</a></li>
+                                    <li><a href="/about/">About Us</a></li>
                                     <li><a href="/history/">Team History</a></li>
                                 </ul>
                             </li>
-                            <li{% if page.url == '/contact.html' %} class="active"{% endif %}><a href="/contact.html">Contact</a></li>
+                            <li{% if page.url == '/contact/index.html' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
