Add sponsors page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
                                 </ul>
                             </li>
                             <li{% if page.url == '/contact/index.html' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
+                            <li{% if page.url == '/sponsors/index.html' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
