--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
                                     <li><a href="/history/">Team History</a></li>
                                 </ul>
                             </li>
+                            <li{% if page.url == '/first/index.html' %} class="active"{% endif %}><a href="/first/">FIRST</a></li>
                             <li{% if page.url == '/contact/index.html' %} class="active"{% endif %}><a href="/contact/">Contact</a></li>
                             <li{% if page.url == '/sponsors/index.html' %} class="active"{% endif %}><a href="/sponsors/">Sponsors</a></li>
                         </ul>
