--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,16 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 
+        {% if page.url == '/index.html' %}
+        <script>
+            $(document).ready(function() {
+                $('.carousel').carousel({
+                    interval: 5000
+                });
+            });
+        </script>
+        {% endif %}
+
         <script src="/js/vendor/bootstrap.min.js"></script>
 
         <script src="/js/main.js"></script>
