--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,11 +39,12 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li{% if page.url == '/index.html' %} class="active"{% endif %}><a href="/">Home</a></li>
-                            <li class="dropdown{% if page.url == '/about/index.html' or page.url contains '/history/' %} active{% endif %}">
+                            <li class="dropdown{% if page.url contains '/about/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/about/">About Us</a></li>
-                                    <li><a href="/history/">Team History</a></li>
+                                    <li><a href="/about/history/">Team History</a></li>
+                                    <li><a href="/about/website/">Website</a></li>
                                 </ul>
                             </li>
                             <li{% if page.url == '/first/index.html' %} class="active"{% endif %}><a href="/first/">FIRST</a></li>
