Right align navbar links.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,7 @@
                     </a>
                     <a class="brand" href="/">Stuypulse</a>
                     <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li{% if page.url == '/index.html' %} class="active"{% endif %}><a href="/">Home</a></li>
+                        <ul class="nav pull-right">
                             <li class="dropdown{% if page.url contains '/about/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
