Set up stuff to customize Bootstrap.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
                 padding-bottom: 40px;
             }
         </style>
+        <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="/css/main.css">
 
         <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
