--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,8 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/about/">About Us</a></li>
-                                    <li><a href="/about/history/">Team History</a></li>
+                                    <li><a href="/about/history/">History</a></li>
+                                    <li><a href="/about/ec/">Leadership</a></li>
                                     <li><a href="/about/website/">Website</a></li>
                                 </ul>
                             </li>
