--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -4,7 +4,16 @@ years: [2012, 2011, 2010, 2009, 2008, 2007, 2006, 2005, 2004, 2003, 2002, 2001]
 ---
 <div class="row">
     <div class="span3">
-        {% include history-nav.html %}
+        <ul class="nav nav-list">
+            <li class="nav-header">Team History</li>
+            {% for year in page.years %}
+                {% for p in site.pages %}
+                    {% if p.layout == 'history' and p.year == year %}
+                        <li {% if page.year == year %}class="active"{% endif %}><a href="/about/history/{{ p.year }}/">{{ p.year }}: {{ p.title }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            {% endfor %}
+        </ul>
     </div>
     <div class="span9">
         <h1>{% if page.year %}{{ page.year }}: {% endif %}{{ page.title }}</h1>
