--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -1,5 +1,6 @@
-<h4>Related Pages</h4>
+<h4>Learn More</h4>
 <ul>
+    <li><a href="/about/history/">Team History</a></li>
     <li><a href="/about/ec/">Team Leadership</a></li>
     <li><a href="/about/website/">About This Website</a></li>
 </ul>
