Add Mentors page and photo of Jim.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,7 @@
                                     <li><a href="/about/">About Us</a></li>
                                     <li><a href="/about/history/">History</a></li>
                                     <li><a href="/about/ec/">Leadership</a></li>
+                                    <li><a href="/about/mentors/">Mentors</a></li>
                                     <li><a href="/about/website/">Website</a></li>
                                 </ul>
                             </li>
