--- a/_layouts/page-with-sidebar.html
+++ b/_layouts/page-with-sidebar.html
@@ -11,6 +11,8 @@ layout: default
             {% include sidebar/about.html %}
         {% elsif page.url == '/about/ec/index.html' %}
             {% include sidebar/ec.html %}
+        {% elsif page.url == '/about/mentors/index.html' %}
+            {% include sidebar/mentors.html %}
         {% elsif page.url == '/community/index.html' %}
             {% include sidebar/outreach.html %}
         {% else %}
