Add link to Mentors page in About page sidebar.

--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -2,6 +2,7 @@
 <ul>
     <li><a href="/about/history/">Team History</a></li>
     <li><a href="/about/ec/">Team Leadership</a></li>
+    <li><a href="/about/mentors/">Mentors</a></li>
     <li><a href="/about/website/">About This Website</a></li>
 </ul>
 <h4>Latest Posts</h4>
