--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -17,6 +17,13 @@ years: [2012, 2011, 2010, 2009, 2008, 2007, 2006, 2005, 2004, 2003, 2002, 2001]
     </div>
     <div class="span9">
         <h1>{% if page.year %}{{ page.year }}: {% endif %}{{ page.title }}</h1>
+        {% if page.photo %}<img src="{{ page.photo }}">{% endif %}
+        {% if page.source-link or page.year >= 2003 %}
+            <ul>
+                {% if page.source-link %}<li><a href="{{ page.source-link }}">Source code</a></li>{% endif %}
+                {% if page.year >= 2003 %}<li><a href="http://www.thebluealliance.com/team/694/{{ page.year }}">Season stats on The Blue Alliance</a></li>{% endif %}
+            </ul>
+        {% endif %}
         {{ content }}
     </div>
 </div>
