Add footer nav. Closes #8.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,16 @@
             <hr>
 
             <footer>
-                <p>&copy; Stuypulse 2012</p>
+                <div class="footer-nav">
+                    <ul>
+                        <li>&copy; Stuypulse 2012</li>
+                        <li><a href="http://firstconnects.us/">FIRSTConnects.Us</a></li>
+                        <li><a href="http://firstthoughts.org/">FIRSTthoughts</a></li>
+                        <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
+                        <li><a href="http://www.facebook.com/pages/Stuypulse-Team-694/81277690973">Like</a></li>
+                        <li><a href="http://www.youtube.com/stuy694">Watch</a></li>
+                    </ul>
+                </div>
             </footer>
 
         </div> <!-- /container -->
