--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,7 +31,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/calendar/">Calendar</a></li>
-                                    <li><a href="/resources/">Tutorials and Resources</a></li>
+                                    <li><a href="/resources/">Tutorials and Documents</a></li>
                                     <li><a href="/resources/press/">Press Materials</a></li>
                                     <li><a href="/resources/forms/">Team Forms</a></li>
                                 </ul>
