--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,9 +30,9 @@
                             <li class="dropdown{% if page.url contains '/resources/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/resources/calendar/">Calendar</a></li>
-                                    <li><a href="/resources/">Tutorials and Documents</a></li>
+                                    <li><a href="/resources/">Resources</a></li>
                                     <li><a href="/resources/press/">Press Materials</a></li>
+                                    <li><a href="/resources/calendar/">Team Calendar</a></li>
                                     <li><a href="/resources/forms/">Team Forms</a></li>
                                 </ul>
                             </li>
