Tweak footer style, add link to GitHub.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
                         <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
                         <li><a href="http://www.facebook.com/pages/Stuypulse-Team-694/81277690973">Like</a></li>
                         <li><a href="http://www.youtube.com/stuy694">Subscribe</a></li>
+                        <li><a href="https://github.com/prog694">Fork</a></li>
                     </ul>
                 </div>
             </footer>
