--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -48,6 +48,15 @@ years: [2012, 2011, 2010, 2009, 2008, 2007, 2006, 2005, 2004, 2003, 2002, 2001]
         <div class="row">
             <div class="span9">
                 {{ content }}
+                {% if page.awards %}
+                    <hr>
+                    <h3>Awards</h4>
+                    <ul>
+                        {% for award in page.awards %}
+                            <li>{{ award }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
             </div>
         </div>
     </div>
