Add media links to navbar.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,6 +34,10 @@
                                     <li><a href="/resources/press/">Press Materials</a></li>
                                     <li><a href="/resources/calendar/">Team Calendar</a></li>
                                     <li><a href="/resources/forms/">Team Forms</a></li>
+                                    <li class="divider"></li>
+                                    <li class="nav-header">Media</li>
+                                    <li><a href="http://www.flickr.com/photos/stuypulse">Photos</a></li>
+                                    <li><a href="http://www.youtube.com/stuy694">Videos</a></li>
                                 </ul>
                             </li>
                             <li{% if page.url contains '/blog/' %} class="active"{% endif %}><a href="/blog/">Blog</a></li>
