Put FIRST page underneath About section.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,13 +13,13 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/about/">About Us</a></li>
+                                    <li><a href="/about/first/">About FIRST</a></li>
                                     <li><a href="/about/history/">History</a></li>
                                     <li><a href="/about/ec/">Leadership</a></li>
                                     <li><a href="/about/mentors/">Mentors</a></li>
                                     <li><a href="/about/website/">Website</a></li>
                                 </ul>
                             </li>
-                            <li{% if page.url == '/first/index.html' %} class="active"{% endif %}><a href="/first/">FIRST</a></li>
                             <li class="dropdown{% if page.url contains '/community/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
