Redesign front page, tweak blog index style.

--- a/css/main.css
+++ b/css/main.css
@@ -60,17 +60,7 @@
 /* Blog style */
 .author-info{
     font-size: 17px;
-}
-
-.author-info .date{
-    display: inline;
-    float: right;
-    position: relative;
-    right: 700px;
-}
-
-.author-info .author{
-    display: inline;
+    margin-top: -8px;
 }
 
 article{
