--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@
     margin-top: 14px;
 }
 
+.front-page-thumb {
+    padding: 0px 15px 15px;
+}
+
 /* For sponsor logos */
 .sponsor-logo-container {
     text-align: center;
