Some small tweaks.

--- a/_includes/sidebar/ec.html
+++ b/_includes/sidebar/ec.html
@@ -1,2 +1,2 @@
 <h4>Team Charter</h4>
-<p>Wondering where these positions come from? Check out our <a href="#">Team Charter</a>.</p>
+<p>Wondering where these positions come from? Check out our <a href="/resources/">Team Charter</a>.</p>
