YAML/Liquid-ize Sponsors page; animate sponsors box on front page. Closes #2.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,15 @@
                 });
             });
         </script>
+        <script src="/js/jquery.flexslider-min.js"></script>
+        <script type="text/javascript" charset="utf-8">
+            $('.flexslider').flexslider({
+                selector: ".slides > .slide",
+                randomize: true,
+                controlNav: false,
+                directionNav: false
+            });
+        </script>
         {% endif %}
 
         <script src="/js/vendor/bootstrap.min.js"></script>
