Add content to Mentors page sidebar.

--- a/_includes/sidebar/mentors.html
+++ b/_includes/sidebar/mentors.html
@@ -1,2 +1,3 @@
 <h4>Interested in becoming a mentor?</h4>
+<p>We seek mentors who are specialists or hobbyists in engineering design, machine operation, programming, or marketing, and who are willing to work with highly motivated students from NYC’s most highly rated science high school!</p>
 <p>For inquiries about mentoring opportunities, <a href="/contact/">contact us</a>!</p>
