Rename Resources page to Documents & Tutorials.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,7 +31,7 @@
                             <li class="dropdown{% if page.url contains '/resources/' %} active{% endif %}">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/resources/">Resources</a></li>
+                                    <li><a href="/resources/">Documents &amp; Tutorials</a></li>
                                     <li><a href="/resources/calendar/">Team Calendar</a></li>
                                     <li class="divider"></li>
                                     <li class="nav-header">Media</li>
