Update resource page sidebar.

--- a/_includes/sidebar/resource.html
+++ b/_includes/sidebar/resource.html
@@ -1,1 +1,1 @@
-<h4><a href="/resources/">&laquo; Back to Resources</a></h4>
+<h5><a href="/resources/">&laquo; Back to Documents &amp; Tutorials</a></h5>
