Use team TypeKit account instead of personal account.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="/css/main.css">
 
-        <script type="text/javascript" src="//use.typekit.net/oqd5nww.js"></script>
+        <script type="text/javascript" src="//use.typekit.net/avp1hlh.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
         <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
