Add sponsor logos. Closes #3.

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,11 @@
     padding: 15px;
 }
 
+.sponsor-text {
+    height: 120px;
+    padding-top: 20px;
+}
+
 /* EC and Mentors pages */
 .ec-description {
     display: inline-block;
