More validation things.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
             });
         </script>
         <script src="/js/jquery.flexslider-min.js"></script>
-        <script type="text/javascript" charset="utf-8">
+        <script type="text/javascript">
             $('.flexslider').flexslider({
                 selector: ".slides > .slide",
                 randomize: true,
