Rename Projects section to Projects & Demos.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,7 +25,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/community/">Outreach</a></li>
-                                    <li><a href="/community/projects/">Projects</a></li>
+                                    <li><a href="/community/projects/">Projects &amp; Demos</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown{% if page.url contains '/resources/' %} active{% endif %}">
