--- a/_includes/sidebar/outreach.html
+++ b/_includes/sidebar/outreach.html
@@ -1,4 +1,4 @@
-<h4>Projects</h4>
-<p>Take a look at some of the <a href="/community/projects/">projects</a> that we have done for the community!</p>
+<h4>Projects &amp; Demos</h4>
+<p>Take a look at some of the <a href="/community/projects/">projects and demos</a> that we have done for the community!</p>
 <h4>Resources</h4>
 <p>Check out our <a href="/resources/">resources</a> for other teams.</p>
