--- a/_includes/sidebar/project.html
+++ b/_includes/sidebar/project.html
@@ -1,1 +1,1 @@
-<h5><a href="/community/projects/">&laquo; Back to Projects</a></h5>
+<h5><a href="/community/projects/">&laquo; Back to Projects &amp; Demos</a></h5>
