Add Woodie Flowers essays. Closes #31.

--- a/_layouts/page-with-sidebar.html
+++ b/_layouts/page-with-sidebar.html
@@ -16,6 +16,8 @@ layout: default
             {% include sidebar/ec.html %}
         {% elsif page.url == '/about/mentors/index.html' %}
             {% include sidebar/mentors.html %}
+        {% elsif page.url contains '/about/mentors/woodieflowers/' %}
+            {% include sidebar/woodieflowersessay.html %}
         {% elsif page.url == '/about/website/index.html' %}
             {% include sidebar/website.html %}
         {% elsif page.url == '/community/index.html' %}
