Reduce front page sponsor slider pause time from 7 to 5 seconds.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
         <script type="text/javascript">
             $('.flexslider').flexslider({
                 selector: ".slides > .slide",
+                slideshowSpeed: 5000,
                 randomize: true,
                 controlNav: false,
                 directionNav: false
