Modify sidebar links on About Us page.

--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -1,7 +1,9 @@
 <h4>Learn More</h4>
 <ul>
+    <li><a href="/about/first/">About FIRST</a></li>
     <li><a href="/about/history/">Team History</a></li>
-    <li><a href="/about/ec/">Team Leadership</a></li>
+    <li><a href="/about/divisions/">Divisions</a></li>
+    <li><a href="/about/ec/">Leadership</a></li>
     <li><a href="/about/mentors/">Mentors</a></li>
     <li><a href="/about/website/">About This Website</a></li>
 </ul>
