--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -32,7 +32,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/resources/">Documents &amp; Tutorials</a></li>
-                                    <li><a href="/resources/calendar/">Team Calendar</a></li>
+                                    <li><a href="/calendar/">Team Calendar</a></li>
                                     <li class="divider"></li>
                                     <li class="nav-header">Media</li>
                                     <li><a href="http://www.flickr.com/photos/stuypulse">Photos</a></li>
