--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Stuypulse{% if page.title %} | {{ page.title }}{% endif %}</title>
-        <meta name="description" content="">
+        <meta name="description" content="{% if page.description%}{{ page.description}}{% else %}Team 694 is an award-winning FIRST robotics team from New York City. Find out about our team, its history, and view pictures and videos.{% endif %}">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="/css/bootstrap.min.css">
