--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 years: [2012, 2011, 2010, 2009, 2008, 2007, 2006, 2005, 2004, 2003, 2002, 2001]
+description: Since its founding twelve years ago, Stuypulse Robotics has significantly developed, accomplishing much in terms of experience, awards and outreach.
+
 ---
 <div class="row">
     <div class="span3">
