Remove absolute time reference & fix name in meta.

--- a/_layouts/history.html
+++ b/_layouts/history.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 years: [2012, 2011, 2010, 2009, 2008, 2007, 2006, 2005, 2004, 2003, 2002, 2001]
-description: Since its founding twelve years ago, Stuypulse Robotics has significantly developed, accomplishing much in terms of experience, awards and outreach.
+description: Over the many years of its existence, Stuypulse has developed significantly, accomplishing much in terms of experience, awards and outreach.
 
 ---
 <div class="row">
