--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,6 +26,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a href="/community/">Outreach</a></li>
                                     <li><a href="/community/projects/">Projects &amp; Demos</a></li>
+                                    <li><a href="/community/alumni/">Alumni Association</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown{% if page.url contains '/resources/' %} active{% endif %}">
