--- a/_layouts/page-with-sidebar.html
+++ b/_layouts/page-with-sidebar.html
@@ -6,7 +6,7 @@ layout: default
         <h1>{{ page.title }}</h1>
         {{ content }}
     </div>
-    <div class="span3">
+    <div class="span3 sidebar">
         <hr>
         {% if page.url == '/about/index.html' %}
             {% include sidebar/about.html %}
