--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,10 @@
     padding-bottom: 10px;
 }
 
+.sidebar {
+    background-color: #e6e6e6;
+}
+
 /* Footer nav style adapted from http://www.controlgroup.com/ */
 .footer-nav {
   display: block;
