--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,14 @@
 
         </div> <!-- /container -->
 
+        <div id="rumble-button-div">
+            <button id="rumbleOptOut" type="button" onclick="toggleRumble();" class="btn btn-default">April Fools! The rumbling is a joke, but click me if it's getting out of hand!</button>
+        </div>
+
+        <audio id="mario" loop>
+            <source src="http://a.frostyhost.com/1/1396316850-a5bf65.mp3" type="audio/mpeg">
+        </audio>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
 
@@ -61,6 +69,8 @@
 
         <script src="/js/vendor/bootstrap.min.js"></script>
 
+        <script src="/js/vendor/jquery.jrumble.1.3.min.js"></script>
+
         <script src="/js/main.js"></script>
 
         <script>
@@ -68,6 +78,44 @@
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
+        </script>
+
+        <script type="text/javascript">
+            var init = function() {
+                $('body').jrumble({x: 1, y: 1, rotation: 0, speed: 50});
+                if (localStorage.rumbleOptOut == null) {
+                    $('body').trigger('startRumble');
+                    var mario = document.getElementById('mario');
+                    if (localStorage.marioLastTime != null) {
+                        mario.currentTime = parseFloat(localStorage.marioLastTime);
+                    }
+                    mario.play();
+                } else {
+                    document.getElementById('rumbleOptOut').innerHTML = "Of course, if you want to toggle the rumbling, click me again. ;)"
+                }
+            };
+        </script>
+        <script>
+            $(document).ready(function() {
+                var toggleRumble = function() {
+                    if (localStorage.rumbleOptOut == null) {
+                        localStorage.rumbleOptOut = "roasted";
+                        document.getElementById('rumbleOptOut').innerHTML = "Of course, if you want to toggle the rumbling, click me again. ;)"
+                        $('body').trigger('stopRumble');
+                        document.getElementById('mario').pause();
+                    } else {
+                        localStorage.removeItem("rumbleOptOut");
+                        $('body').trigger('startRumble');
+                        document.getElementById('mario').play();
+                    }
+                }
+            });
+
+            window.onbeforeunload = function() {
+                localStorage.marioLastTime = document.getElementById('mario').played.end(0);
+            };
+
+            document.getElementById('mario').addEventListener('loadedmetadata', init, false);
         </script>
     </body>
 </html>
