--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,10 @@
 ---
 layout: default
+comments: true
 ---
 <h1>{{ page.title }}</h1>
 <div class="author-info">By {{ page.author }} on {{page.date | date: "%A, %B %d, %Y"}}</div>
 <article>
 {{ content }}
 </article>
+{% include disqus.html %}
