Site-wide switch from Stuypulse to StuyPulse

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,12 @@
             <footer>
                 <div class="footer-nav">
                     <ul>
-                        <li>&copy; Stuypulse 2013-{{ site.time | date: "%Y" }}</li>
+                        comments: true
+                        <li>&copy; StuyPulse 2013-{{ site.time | date: "%Y" }}</li>
                         <li><a href="http://firstconnects.us/">FIRSTConnects.Us</a></li>
                         <li><a href="http://firstthoughts.org/">FIRSTthoughts</a></li>
                         <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
-                        <li><a href="http://www.facebook.com/pages/Stuypulse-Team-694/81277690973">Like</a></li>
+                        <li><a href="http://www.facebook.com/pages/StuyPulse-Team-694/81277690973">Like</a></li>
                         <li><a href="http://www.youtube.com/stuy694">Subscribe</a></li>
                         <li><a href="https://github.com/prog694">Fork</a></li>
                     </ul>
