Change copyright wording.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
             <footer>
                 <div class="footer-nav">
                     <ul>
-                        <li>&copy; StuyPulse 2013-{{ site.time | date: "%Y" }}</li>
+                        <li>&copy; {{ site.time | date: "%Y" }} StuyPulse</li>
                         <li><a href="http://firstconnects.us/">FIRSTConnects.Us</a></li>
                         <li><a href="http://firstthoughts.org/">FIRSTthoughts</a></li>
                         <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
