--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
                         <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
                         <li><a href="http://www.facebook.com/pages/StuyPulse-Team-694/81277690973">Like</a></li>
                         <li><a href="http://www.youtube.com/stuy694">Subscribe</a></li>
-                        <li><a href="https://github.com/team694">Fork</a></li>
+                        <li><a href="https://github.com/Team694">Fork</a></li>
                     </ul>
                 </div>
             </footer>
