--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
                         <li><a href="http://firstconnects.us/">FIRSTConnects.Us</a></li>
                         <li><a href="http://firstthoughts.org/">FIRSTthoughts</a></li>
                         <li><a href="http://twitter.com/StuyPulseRobots">Follow</a></li>
-                        <li><a href="http://www.facebook.com/pages/StuyPulse-Team-694/81277690973">Like</a></li>
-                        <li><a href="http://www.youtube.com/stuy694">Subscribe</a></li>
+                        <li><a href="http://www.facebook.com/stuypulse">Like</a></li>
+                        <li><a href="http://www.youtube.com/user/stuy694">Subscribe</a></li>
                         <li><a href="https://github.com/Team694">Fork</a></li>
                     </ul>
                 </div>
