--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -6,6 +6,7 @@
     <li><a href="/about/ec/">Leadership</a></li>
     <li><a href="/about/mentors/">Mentors</a></li>
     <li><a href="/about/website/">About This Website</a></li>
+    <li><a href="/downloads/teamdocs/PressPacket2014.pdf">Press Packet</a></li>
 </ul>
 <h4>Latest Posts</h4>
 {% include latest-posts.html %}
